# ParGeo

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  bug.geo  debug.py  main.py  mainTest.py  mypy.ini  process_geo.py  pyproject.toml  requirements.in  requirements.txt  sample_20_Nsub2_Nholes100.geo
.github/: lint.yml  pull_request_template.md  tests.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-check.yml  lint-check.yml  main.yml  mypy.yml  python-publish.yml  tests.yml
Extension_3D/: layers.py
bubbles/: __init__.py  constraint.py  constraints.py  geometry.py  gmsh_api.py  gmsh_utils.py  plot_utils.py  topology.py  transform.py  utils.py
bubbles/geo_utils/: utils.py  writeGeo.py
bubbles/tests/two_d/: test_geometry.py
bubbles/three_d/: bubble.py  clip.py  glue.py  layers.py  merge.py  utils.py
bubbles/two_d/: constraints.py  createHoles.py  domainWithHoles.py  generate_topology.py  geometry.py  hole.py  intersections.py  polygon.py  refinement_methods.py  sat.py  topo_to_gmsh.py  topology.py  topology_deprecated.py  topology_new.py  topology_v2.py  transform.py  utils.py  writeGeo.py
bubbles/two_d_deprecated/: intersections.py  polygon.py  topology.py
data/: bug.json  bug10.geo  bugHole.json  sphere.geo
docs/: bubbles.rst  conf.py  index.rst  modules.rst  pargeo.rst  requirements.in  requirements.txt
docs/notebooks/: getting-started.ipynb
docs/source/: conf.py  index.rst  modules.rst
docs_old/source/: bubbles.rst
examples/: chess_board.py  circle_tunnel.py  disc_edge_cases.py  distance_constraints.py  edge_cases.py  hanyue.py  nightsky.py  periodic_examples.py  rotated_periodicity.py  stellar_constraints.py  stellar_samples.py  stellar_samples_periodic_constrains.py
examples/two_d/: chess_board.py  circle_tunnel.py  disc_edge_cases.py  edge_cases.py  edge_cases_copy2.py  edge_cases_v2.py  edge_cases_v3.py  simple_periodicity.py  stellar_constraints.py  stellar_samples.py  stellar_samples_disjoint.py  stellar_samples_periodic_constrains.py
extension_3d/: bubble.py  glue.py
notebooks/: getting-started.ipynb
pargeo/: __init__.py  constraint.py  domain.py  geometry.py  gmsh_api.py  gmsh_utils.py  topology.py  transform.py
pargeo/utils/: constants.py  geometry_utils.py  gmsh_utils.py  plot.py  plot_utils.py  typing.py  typing_utils.py
requirements/: requirements.in  requirements.txt
tests/: conftest.py  test_constraint.py  test_dolfin.py  test_domain.py  test_geometry_three_d.py  test_geometry_two_d.py  test_three_d.py  test_topology.py  test_two_d.py
tests/data/: 2d_domain_with_hole.geo  sphere_3d.geo
topology/geo_utils/: utils.py  writeGeo.py
topology/tests/three_d/: test_geometry.py
topology/tests/two_d/: test_geometry.py
topology/three_d/: bubble.py  clip.py  glue.py  layers.py  merge.py  utils.py
topology/two_d/: createHoles.py  domain.py  domainWithHoles.py  generate_topology.py  hole.py  intersections.py  logic.py  main.py  minimize.py  polygon.py  processGeo.py  sat.py  star_geometry.py  topology.py  transform.py  utils.py  writeGeo.py
