[project]
name = "bubbles"
authors = [
  { name="xxx", email="xxx@smt.com" },
]
description = "PLEASE ADD A DESCRIPTION"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bubbles*"]

[tool.mypy]
show_error_codes = true
disallow_incomplete_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "bubbles.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-v -ra --cov=bubbles"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "D", "A", "N", "B", "SIM", "C4", "TID"]
ignore = [
    "E741", # Ambiguous variable name
    "D213", # Multi-line docstring summary should start at the second line
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D401", # First line should be in imperative mood; try rephrasing
    "D407", # Missing dashed underline after section
    "D406", # Section name should end with a newline
    "D106", # Missing docstring in public nested class
    "B006", # Do not use mutable data structures for argument defaults
    "B008", # Do not perform function calls in argument defaults
    "B905", # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.per-file-ignores]
"test_*.py" = ["D", "E402"]
"__init__.py" = ["D"]
"notebooks/*.py" = [
    "D",    # Make docstrings entirely optional
    "E402", # Module level import not at top of file
    "SIM115", # Use context handler for opening files
    "I", # Allow unordered imports
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.jupytext]
# Always pair ipynb notebooks to py:percent files
formats = ["ipynb", "py:percent"]
