[tool.poetry]
name = "bubbles"
version = "0.1.0"
description = "Create complex domains."
authors = ["TillS <tillschaefer96@hotmail.it>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.1"
pydantic = "^1.10.9"
matplotlib = "^3.7.1"
gmsh = "^4.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.269"
mypy = "^1.3.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
