[tool.poetry]
name = "pargeo"
version = "0.3.2"
description = "Generate complex two-dimensional geometries for simulations based on mesh discretizations."
authors = [
    "Till Schäfer <tillschaefer96@hotmail.it>", 
    "Robert Gruhlke <r.gruhlke@fu-berlin.de>"
]
maintainers = [
    "Till Schäfer <tillschaefer96@hotmail.it>", 
    "Robert Gruhlke <r.gruhlke@fu-berlin.de>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Priusds/ParGeo"
documentation = "https://pargeo.readthedocs.io/en/latest/"
keywords = ["geometry", "mesh", "gmsh", "composite", "material", "FEM", "Finite Element Method"]
classifiers = ["Intended Audience :: Science/Research",]

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.1"
matplotlib = "^3.7.1"
gmsh = "^4.11.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
ruff = "^0.1.14"
mypy = "^1.3.0"
pytest = "^7.4.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
sphinxcontrib-napoleon = "^0.7"
nbsphinx = "^0.9.3"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["F401"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "extension_3d",
    "process_geo.py",
]
